kubernetes/apps/media/kavita/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
  labels:
    app.kubernetes.io/name: kavita
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kavita
  template:
    metadata:
      name: kavita
      labels:
        app.kubernetes.io/name: kavita
    spec:
      containers:
        - name: kavita
          image: ghcr.io/kareadita/kavita:0.8.9@sha256:1f2acae7466d022f037ea09f7989eb7c487f916b881174c7a6de33dbfa8acb39
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: media
              mountPath: /media
            - name: config
              mountPath: /kavita/config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: pvc-media-smb
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config
